Merge 1.9 update to master (#63)
* Initial 1.9 changes

* Fixed simple renames.

* Updated sounds and some entity AI related stuff

* Mainly updated/Fixed registry related stuff

* Updated datawatchers to datamanager

* Finished update to 1.9.
Some bugs might be still in there